--- a/USstatesCasesReport.html
+++ b/USstatesCasesReport.html
@@ -18,8 +18,8 @@
     <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesDeathsReport.html'"> <b> 4 </b> </button>
   </div>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>State : </b><select name="stateSelect" id="stateButton"></select>
+<br><br><br><br><br><br><br><br><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>State : </b><select name="stateSelect" id="stateButton"></select>
 <!-- Load d3.js , d3-annotation, d3-scale-chromatic-->
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
@@ -32,9 +32,9 @@
 <div class="rectangle2">
   <h3>Source of Data</h3>
   <div class=p2> &nbsp;<a href="https://github.com/nytimes/covid-19-data">NewYork Times Covid-19-data.</a> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases.</div>
-  <h3>Trend in State Cases </h3>
+  <h3>Trend in Cases in States</h3>
   <div class=p2> &nbsp; While the winter season trend is not visible in all the states in this chart, but it's clearly visible in four most populous states : <b> California, Texas, Florida, New-York.</b></div>
-  <h3>Chart Navigation Tips</h3>
+  <h3>Chart Exploration Tips</h3>
   <div class=p2> &nbsp; Select a state name from the dropdown <b>State </b>option from top left corner of the chart and see the change in chart.</div>
 </div>
 
@@ -42,8 +42,8 @@
 <script>
 // Last Update - 07/28/23 - 5 PM - Work Complete
 // set the dimensions and margins of the graph
-var margin = {top: 50, right: 150, bottom: 50, left: 100},
-    width = 900 - margin.left - margin.right,
+var margin = {top: 50, right: 150, bottom: 50, left: 220},
+    width = 1050 - margin.left - margin.right + 50,
     height = 500 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
@@ -86,7 +86,7 @@ var svg = d3.select("#my_dataviz")
       label: "1st Steep Rise",
       title: "Winter Season"
     },
-    x: 195,
+    x: 210,
     y: 340,
     dy: -20,
     dx: -20
@@ -95,7 +95,7 @@ var svg = d3.select("#my_dataviz")
       label: "2nd Steep Rise",
       title: "Winter Season"
     },
-    x: 405,
+    x: 460,
     y: 150,
     dy: -20,
     dx: -20
@@ -194,30 +194,31 @@ var focus = svg
     svg.append("text")
        .attr("text-anchor", "middle")
        .attr("transform", "rotate(-90)")
-       .attr("y", -margin.left + margin.top - 10)
+       .attr("y", -margin.left + 150)
        .attr("x", -height/2)
        .text("Cases");
 
 // Add Chart Title :
    svg.append("text")
-      .attr("x", margin.left -20)
+      .attr("x", margin.left-200)
       .attr("y", -20 )
+      .attr("font-weight","bold")
       .style("text-anchor", "left")
       .text("Scene 3 : Chart showing Covid-19 cases reported from 2020 to 2023 for US States.");
 
     svg.append("line")
-       .attr("x1", 195)
+       .attr("x1", 210)
        .attr("y1", 0)
-       .attr("x2", 195)
+       .attr("x2", 210)
        .attr("y2", 400)
        .attr("stroke-dasharray", "10", "20")
        .attr("stroke", "grey")
        .attr("fill-opacity",".5");
 
     svg.append("line")
-       .attr("x1", 405)
+       .attr("x1", 460)
        .attr("y1", 0)
-       .attr("x2", 405)
+       .attr("x2", 460)
        .attr("y2", 400)
        .attr("fill-opacity","0.1")
        .attr("stroke-dasharray", "10", "20")
