--- a/USdeathsReport.html
+++ b/USdeathsReport.html
@@ -7,7 +7,7 @@
 
 <div class="rectangle1">
   <h1>&nbsp; Covid-19 Spread in US across the seasons from 2020 to 2023.</h1>
-  <p1> &nbsp;&nbsp;Believe it or not, Covid is still a thing in US, even today! This is an interactive visualization to show the historical <b>cumulative figures</b> of Covid-19 in United States from January 2020 to March 2023 and it's <b>trend across the seasons.</b></p1> <br>
+  <p1> &nbsp;&nbsp;Believe it or not, Covid is still a thing in US, even today! This is an interactive slideshow visualization to show the historical <b>cumulative figures</b> of Covid-19 in United States from January 2020 to March 2023 and it's <b>trend across the seasons.</b></p1> <br>
   <br>
   <p1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Click Buttons below to toggle the scenes!</b></p1>
   <div class="btn-group">
@@ -37,10 +37,10 @@
 
 <body>
 <script>
-// Last Update - 07/28/23 - 5 PM - Work Complete
+// Last Update - 07/28/23 - 8 PM - Work Complete
 // set the dimensions and margins of the graph
-var margin = {top: 50, right: 150, bottom: 50, left: 220},
-    width = 1050 - margin.left - margin.right + 50,
+var margin = {top: 50, right: 150, bottom: 50, left: 120},
+    width = 900 - margin.left - margin.right + 50,
     height = 500 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
@@ -69,7 +69,7 @@ var svg = d3.select("#my_dataviz")
       label: "1st Steep Rise",
       title: "Winter Season"
     },
-    x: 220,
+    x: 210,
     y: 270,
     dy: -20,
     dx: -20
@@ -87,7 +87,7 @@ var svg = d3.select("#my_dataviz")
       label: "2nd Steep Rise",
       title: "Winter Season"
     },
-    x: 450,
+    x: 410,
     y: 110,
     dy: -20,
     dx: -20
@@ -204,13 +204,13 @@ svg
     svg.append("text")
        .attr("text-anchor", "middle")
        .attr("transform", "rotate(-90)")
-       .attr("y", -margin.left + 150)
+       .attr("y", -margin.left + 50)
        .attr("x", -height/2)
        .text("Deaths");
 
 // Add Chart Title :
 svg.append("text")
-      .attr("x", margin.left-200 )
+      .attr("x", margin.left-100 )
       .attr("y", -20 )
       .attr("font-weight","bold")
       .style("text-anchor", "left")
