--- a/USstatesDeathsReport.html
+++ b/USstatesDeathsReport.html
@@ -8,7 +8,7 @@
 <!-- Rectangular box positioned at top -->
 <div class="rectangle1">
   <h1>&nbsp; Covid-19 Spread in US across the seasons from 2020 to 2023.</h1>
-  <p1> &nbsp;&nbsp;Believe it or not, Covid is still a thing in US, even today! This is an interactive visualization to show the historical <b>cumulative figures</b> of Covid-19 in United States from January 2020 to March 2023 and it's <b>trend across the seasons.</b></p1> <br>
+  <p1> &nbsp;&nbsp;Believe it or not, Covid is still a thing in US, even today! This is an interactive slideshow visualization to show the historical <b>cumulative figures</b> of Covid-19 in United States from January 2020 to March 2023 and it's <b>trend across the seasons.</b></p1> <br>
   <br>
   <p1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Click Buttons below to toggle the scenes!</b></p1>
   <div class="btn-group">
@@ -18,8 +18,8 @@
     <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USstatesDeathsReport.html'"> <b> 4 </b> </button>
   </div>
 </div>
-<br><br><br><br><br><br><br><br><br><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>State : </b><select name="stateSelect" id="stateButton"></select>
+<br><br><br><br><br><br><br><br><br><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>State : </b><select name="stateSelect" id="stateButton"></select>
 <!-- Load d3.js , d3-annotation, d3-scale-chromatic-->
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
@@ -40,10 +40,10 @@
 
 <body>
 <script>
-// Last Update - 07/28/23 - 5 PM - Work Complete
+// Last Update - 07/28/23 - 8 PM - Work Complete
 // set the dimensions and margins of the graph
-var margin = {top: 50, right: 150, bottom: 50, left: 220},
-    width = 1050 - margin.left - margin.right + 50,
+var margin = {top: 50, right: 150, bottom: 50, left: 120},
+    width = 900 - margin.left - margin.right + 50,
     height = 500 - margin.top - margin.bottom;
 
 // append the svg object to the body of the page
@@ -194,13 +194,13 @@ var focus = svg
     svg.append("text")
        .attr("text-anchor", "middle")
        .attr("transform", "rotate(-90)")
-       .attr("y", -margin.left + 150)
+       .attr("y", -margin.left + 50)
        .attr("x", -height/2)
        .text("Deaths");
 
 // Add Chart Title :
    svg.append("text")
-      .attr("x", margin.left-200)
+      .attr("x", margin.left-100)
       .attr("y", -20 )
       .attr("font-weight","bold")
       .style("text-anchor", "left")
