--- a/USstatesDeathsReport.html
+++ b/USstatesDeathsReport.html
@@ -86,7 +86,7 @@ const annotations = [
       label: "1st Steep Rise",
       title: "Winter Season"
     },
-    x: 230,
+    x: 220,
     y: 250,
     dy: -20,
     dx: -20
@@ -95,7 +95,7 @@ const annotations = [
       label: "2nd Steep Rise",
       title: "Winter Season"
     },
-    x: 460,
+    x: 420,
     y: 100,
     dy: -20,
     dx: -20
@@ -147,9 +147,9 @@ var focus = svg
       .append('g')
       .attr("class", "line")
       .append('circle')
-      .style("fill", "none")
+      .style("fill", "black")
       .attr("stroke", "black")
-      .attr('r', 5)
+      .attr('r', 3)
       .style("opacity", 0)
 
   // Create the text that travels along the curve of chart
@@ -207,18 +207,18 @@ var focus = svg
       .text("Scene 4 : Chart showing Covid-19 deaths reported from 2020 to 2023 for US States.");
 
     svg.append("line")
-       .attr("x1", 230)
+       .attr("x1", 220)
        .attr("y1", 0)
-       .attr("x2", 230)
+       .attr("x2", 220)
        .attr("y2", 400)
        .attr("stroke-dasharray", "10", "20")
        .attr("stroke", "grey")
        .attr("fill-opacity",".5");
 
     svg.append("line")
-       .attr("x1", 460)
+       .attr("x1", 420)
        .attr("y1", 0)
-       .attr("x2", 460)
+       .attr("x2", 420)
        .attr("y2", 400)
        .attr("fill-opacity","0.1")
        .attr("stroke-dasharray", "10", "20")
