--- a/2021.html
+++ b/2021.html
@@ -12,10 +12,10 @@
     <p1><b>Click Buttons below to toggle the scenes!</b></p1>
   <div class="btn-group">
     <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> <b> 2020 </b> </button>
+    <
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2021.html'"> <b> 2021 </b> </button>
     >
-    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> <b> 2021 </b> </button>
-    >
-    <button class="button" disabled> <b> 2022 </b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2022.html'"> <b> 2022 </b> </button>
     >
     <button class="button" disabled> <b> 2023 </b> </button>
   </div>
@@ -32,10 +32,10 @@
 <div class="rectangle2">
   <h3>Source of Data</h3>
   <div class=p2> &nbsp;<a href="https://github.com/nytimes/covid-19-data">NewYork Times Covid-19-data.</a> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases.</div>
-  <h3>Trend in Cases in 2020</h3>
-  <div class=p2> &nbsp;In the beginning of year <b>2020</b>, covid cases rises slowly but <b>cases grew signficantly towards the end in the winter season</b>, raising concern across the country. 
-    The <b> largest peak </b>in hospitalizations occurred in December 2020, aligning with the largest record in the Covid-19 cases. <br>
-    &nbsp;&nbsp;While everyone predicted the covid-19 is unstoppable now, let's check in next slide how it turned out in 2021. Click <b>2021</b> from the buttons!</div>
+  <h3>Trend in Cases in 2021</h3>
+  <div class=p2> &nbsp; Covoid-19 slowed down in the first quarter of 2021, thanks to full scale <b>vaccinations</b> across the country. 
+    However, the cases seems to be rising again towards the <b>winter season</b>, which alligns with 2020 trend of peaks, despite vaccinations.<br>
+    &nbsp;&nbsp;Do Vaccinations are not effective in winter months ? let's check in next slide how it turned out in 2022. Click <b>2022</b> from the buttons!</div>
   <h3>Chart Exploration Tips</h3>
   <div class=p2> &nbsp; Click on the chart and drag horizontally to zoom in. Double click anywhere in the chart to restore to original view.</div>
 </div>
@@ -87,6 +87,23 @@ var svg = d3.select("#my_dataviz")
     y: 170,
     dy: -20,
     dx: -20
+    },
+    { note: {
+      label: "Slowed Spread",
+      title: "Vaccination"
+    },
+    x: 310,
+    y: 270,
+    dy: 20,
+    dx: 20
+    },
+    { note: {
+      title: "Prediction 2022"
+    },
+    x: 495,
+    y: 70,
+    dy: -20,
+    dx: -20
     }]
 
 // Add annotation to the chart
@@ -135,12 +152,12 @@ var svg = d3.select("#my_dataviz")
 //Initialize the chart with first Filter for First Scene.
     var line = svg.append("g")
        .attr("clip-path", "url(#clip)")
-    var area = svg.append("g")
-       .attr("clip-path", "url(#clip)")
-    var dataFilter = data.filter(function(d){return d.date.getFullYear()==2020;})
+    var dataFilter = data.filter(function(d){return (d.date.getFullYear()==2020 || d.date.getFullYear()==2021);})
     var curve = d3.line().curve(d3.curveNatural);
-    var points = [[203, 323], [293, 190],[353, 120]];
+    var points1 = [[203, 323], [293, 190],[353, 120]];
+    var points2 = [[417, 190], [490, 80],[550, 30]];
 
+       console.log(dataFilter)
   line
     .append("path")
     .datum(dataFilter)
@@ -198,11 +215,20 @@ svg.append("text")
       .attr("y", -20 )
       .attr("font-weight","bold")
       .style("text-anchor", "left")
-      .text("Scene 1 : US Cases in Covid-19 reported from 2020.");
+      .text("Scene 2 : US Cases in Covid-19 reported from 2020 to 2021.");
 
   svg.append("path")
        .attr("class","curve")
-       .attr('d', curve(points))
+       .attr('d', curve(points1))
+       .attr("fill-opacity","0.1")
+       .attr("stroke-dasharray", "10", "100")
+       .attr("stroke-width", 3)
+       .attr("fill", "none")
+       .attr("stroke", "steelblue");
+
+  svg.append("path")
+       .attr("class","curve")
+       .attr('d', curve(points2))
        .attr("fill-opacity","0.1")
        .attr("stroke-dasharray", "10", "100")
        .attr("stroke-width", 3)
@@ -227,7 +253,14 @@ svg.append("text")
         svg.append("g").call(makeAnnotations);
         svg.append("path")
            .attr("class","curve")
-           .attr('d', curve(points))
+           .attr('d', curve(points1))
+           .attr("fill-opacity","0.1")
+           .attr("stroke-dasharray", "10", "100")
+           .attr("stroke-width", 3)
+           .attr("stroke", "steelblue");
+        svg.append("path")
+           .attr("class","curve")
+           .attr('d', curve(points2))
            .attr("fill-opacity","0.1")
            .attr("stroke-dasharray", "10", "100")
            .attr("stroke-width", 3)
@@ -236,7 +269,7 @@ svg.append("text")
         xScale.domain([ xScale.invert(extent[0]), xScale.invert(extent[1]) ])
         line.select(".brush").call(brush.move, null) // This remove the grey brush area as soon as the selection has been done
         d3.select(".annotations").remove();
-        d3.select(".curve").remove();
+        d3.selectAll(".curve").remove();
       }
 
       // Update axis and line position
@@ -259,7 +292,7 @@ svg.append("text")
     // This allows to find the closest X index of the mouse:
     var bisect = d3.bisector(function(d) { return d.date; }).left;
     var x0 = xScale.invert(d3.mouse(this)[0]);
-    var i = bisect(dataFilter, x0, 1);
+    var i = bisect(data, x0, 1);
     selectedData = dataFilter[i]
     
     focus
