--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="btn-group">
     <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/index.html'"> <b> 2020 </b> </button>
     >
-    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/USdeathsReport.html'"> <b> 2021 </b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2021.html'"> <b> 2021 </b> </button>
     >
     <button class="button" disabled> <b> 2022 </b> </button>
     >
@@ -33,7 +33,7 @@
   <h3>Source of Data</h3>
   <div class=p2> &nbsp;<a href="https://github.com/nytimes/covid-19-data">NewYork Times Covid-19-data.</a> The data is the product of dozens of journalists working across several time zones to monitor news conferences, analyze data releases and seek clarification from public officials on how they categorize cases.</div>
   <h3>Trend in Cases in 2020</h3>
-  <div class=p2> &nbsp;In the beginning of year <b>2020</b>, covid cases rises slowly but <b>cases grew signficantly towards the end in the winter season</b>, raising concern across the country. 
+  <div class=p2> &nbsp;In the beginning of year <b>2020</b>, covid-19 cases started slowly but <b>cases grew signficantly</b> towards the year end in the <b>winter season</b>, raising concern across the country. 
     The <b> largest peak </b>in hospitalizations occurred in December 2020, aligning with the largest record in the Covid-19 cases. <br>
     &nbsp;&nbsp;While everyone predicted the covid-19 is unstoppable now, let's check in next slide how it turned out in 2021. Click <b>2021</b> from the buttons!</div>
   <h3>Chart Exploration Tips</h3>
