--- a/2021.html
+++ b/2021.html
@@ -35,7 +35,7 @@
   <h3>Trend in Cases in 2021</h3>
   <div class=p2> &nbsp; Covoid-19 slowed down in the first quarter of 2021, thanks to full scale <b>vaccinations</b> across the country. 
     However, the cases seems to be rising again towards the <b>winter season</b>, which alligns with 2020 trend of peaks, despite vaccinations.<br>
-    &nbsp;&nbsp;Do Vaccinations are not effective in winter months ? let's check in next slide how it turned out in 2022. Click <b>2022</b> from the buttons!</div>
+    &nbsp;&nbsp;Were Vaccinations not effective in winter months ? let's check in next slide how it turned out in 2022. Click <b>2022</b> from the buttons!</div>
   <h3>Chart Exploration Tips</h3>
   <div class=p2> &nbsp; Click on the chart and drag horizontally to zoom in. Double click anywhere in the chart to restore to original view.</div>
 </div>
