--- a/2022.html
+++ b/2022.html
@@ -18,7 +18,7 @@
     <
     <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2022.html'"> <b> 2022 </b> </button>
     >
-    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2022.html'"> <b> 2023 </b> </button>
+    <button class="button" onclick="window.location.href='https://lp18-illinois.github.io/Narrative-Viz-project/2023.html'"> <b> 2023 </b> </button>
   </div>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br>
@@ -37,7 +37,7 @@
   <h3>Trend in Cases in 2022</h3>
   <div class=p2> &nbsp; Covid cases rose signficantly in the first quarter of 2022 across the country, which now termed as <b>second wave</b>. 
     After first quarter, the cases seems to be little in control, possibly indicating few factors in play like second shot of vaccinations and herd immunity.<br>
-    &nbsp;&nbsp;Ok, but what about in winter months ? This time it seems to be in steady rise instead of steep. 
+    <br>&nbsp;&nbsp;Ok, but what about in winter months ? This time it seems to be in steady rise instead of steep. 
     Though our data is collected till <b> March 2023 </b>, let's check in next slide how it turned out in beginning of 2023. Click <b>2023</b> from the buttons!</div>
   <h3>Chart Exploration Tips</h3>
   <div class=p2> &nbsp; Click on the chart and drag horizontally to zoom in. Double click anywhere in the chart to restore to original view.</div>
